# JobScrapper

./: .gitignore  README.md  conftest.py  package-lock.json  package.json
.github/workflows/: release.yml
python/: jobscrapper.spec  pyi_rthook_playwright.py  pyproject.toml
python/src/: api.py  config.py
python/src/db/: repository.py  schema.sql
python/src/models/: __init__.py  job.py  search.py  status.py
python/src/scrapers/: adzuna.py  apec.py  base.py  cadremploi.py  cadresonline.py  francetravail.py  freework.py  glassdoor.py  hellowork.py  indeed.py  jobijoba.py  jooble.py  linkedin.py  malt.py  monster.py  registry.py  registry_loader.py  welcometothejungle.py  wizbii.py
python/src/scrapers/helpers/: browser.py  browser_pool.py  http_client.py  rate_limiter.py
python/src/services/: dedup_service.py  export_service.py  search_service.py
src/: preload.js
src/main/: index.js  python.js
src/renderer/: index.html  index.js  router.js  style.css
src/renderer/components/: modal.js
src/renderer/tabs/: detail.js  results.js  search.js
src/renderer/utils/: html.js
tests/: test_api.py
tests/unit/: test_dedup.py  test_export.py  test_models.py
